--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ lein: 2.9.1
 jdk:
   - openjdk11
 install: lein i
+cache:
+  directories:
+    - .graalvm
+    - $HOME/.m2
 script:
   - lein ancient
   - lein t
+  - lein build
+  # Smoke test for native image
+  - echo "(ns foo.bar)" | target/native/imo-linux-amd64 -
