--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,11 @@ jobs:
     name: Check dependency versions
     runs-on: ubuntu-latest
     steps:
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: deps-${{ runner.os }}-${{ hashFiles('project.clj') }}
       - uses: actions/setup-java@v1
         with:
           java-version: "11"
@@ -17,6 +22,16 @@ jobs:
     name: Run test suites
     runs-on: ubuntu-latest
     steps:
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: deps-${{ runner.os }}-${{ hashFiles('project.clj') }}
+      - name: Cache GraalVM
+        uses: actions/cache@v2
+        with:
+          path: .graalvm
+          key: graalvm-${{ runner.os }}-${{ hashFiles('graalvm.version') }}
       - uses: actions/setup-java@v1
         with:
           java-version: "11"
