--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,9 @@ jobs:
       - uses: DeLaGuardo/setup-clojure@master
         with:
           lein: 2.9.6
-      - run: lein ancient
+      - run: |
+          lein show-deps
+          lein ancient
   run-tests:
     name: Run tests
     runs-on: ubuntu-latest
@@ -34,7 +36,9 @@ jobs:
       - uses: DeLaGuardo/setup-clojure@master
         with:
           lein: 2.9.6
-      - run: lein t
+      - run: |
+          lein lint
+          lein t
   build-native-image:
     name: Build native image
     runs-on: ubuntu-latest
